Fixed broken sidebar design on small/med screens

--- a/main.scss
+++ b/main.scss
@@ -187,7 +187,7 @@ h3:not([class*="select"]):not([class*="archives"]):not([class*="resources"])::be
     }
 
     @media only screen and (min-width: $mid-bp) {
-        grid-column: 6/8;
+        grid-column: 6/9;
     }
 
     @media only screen and (min-width: $large-bp) {
@@ -215,7 +215,7 @@ h3:not([class*="select"]):not([class*="archives"]):not([class*="resources"])::be
         width: 100px; 
         height: 100px;
         content:"";
-        margin: 20px auto auto 10vw;
+        margin: 20px auto auto 15vw;
 
         @media only screen and (min-width: $large-bp) {
             background-image: none;
